--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "7.13.0",
     "@date-io/date-fns": "^1.3.13",
     "@devexpress/dx-react-chart": "^2.7.6",
     "@devexpress/dx-react-chart-material-ui": "^2.7.6",
     "@devexpress/dx-react-core": "^2.7.6",
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.58",
-    "@material-ui/pickers": "^3.3.10",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "4.0.0-alpha.61",
+    "@material-ui/pickers": "^3.3.11",
     "@react-oauth/google": "^0.9.0",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
@@ -18,15 +19,17 @@
     "apexcharts": "^3.28.1",
     "axios": "^0.21.1",
     "date-fns": "^2.0.0-beta.5",
+    "dotenv": "^16.3.2",
     "file-saver": "^2.0.5",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
-    "moment": "^2.29.1",
-    "react": "^17.0.2",
-    "react-apexcharts": "^1.3.9",
-    "react-dom": "^17.0.2",
-    "react-dropzone": "^11.3.4",
-    "react-multiple-select-dropdown-lite": "^2.0.4",
+    "moment": "^2.30.1",
+    "prop-types": "^15.8.1",
+    "react": "^16.14.0",
+    "react-apexcharts": "^1.4.1",
+    "react-dom": "^16.14.0",
+    "react-dropzone": "^11.7.1",
+    "react-multiple-select-dropdown-lite": "^2.0.6",
     "react-nice-dates": "^3.1.0",
     "react-progress-button": "^5.1.0",
     "react-redux": "^7.2.4",
@@ -41,7 +44,7 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
