--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -5,10 +5,10 @@ RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
 COPY server/package.json .
-RUN npm install
+RUN pnpm i
 COPY server/ .
 
-RUN npm install && npm install nodemon --save-dev
+RUN pnpm i && pnpm i nodemon --save-dev
 
 EXPOSE 5000
 CMD ["yarn", "start-prod"]
