--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "moment": "^2.29.1",
     "mongoose": "^5.12.10",
     "nodemailer": "^6.6.3",
-    "puppeteer": "^21.7.0"
+    "puppeteer": "^21.7.0",
+    "twilio": "^4.21.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
